#
# Makefile.am:
# Automake file for iftop.
#
# I don't understand this stuff, so I just stole it from the tpop3d
# distribution. That means that, really, Mark Longair should take credit for
# it.
#   -- Chris Lightfoot
#
# $Id: Makefile.am,v 1.11 2010/11/27 17:19:25 pdw Exp $
#

AUTOMAKE_OPTIONS = gnu

SUBDIRS = src

